# url-shortener

./: .env.example  Dockerfile.dev  Makefile  README.md  compose.yml  pyproject.toml  requirements.txt  start.sh
app/: constants.py  main.py  schemas.py  validators.py
app/backend/: env.py
app/database/: loaddb.py  pg.py
app/services/: urls.py
tests/services/: conftest.py  test_urls.py
